# PointPicker

./: package-lock.json  package.json  tsconfig.json  webpack.config.js
public/: bundle.js  index.html
rust/: Cargo.toml
rust/src/: lib.rs
src/: App.ts  FileHandling.ts  GpsPoint.ts  MainWindow.ts  PointSection.ts  Rstar.ts  Shapefile.ts  WasmModule.ts  main.ts
src/dbf/: dbf.js  package.json
src/dbf/src/: structure.js
src/dbf2/: dbf.ts
src/ui/: ActionButtons.ts  PickOne.ts  PointFixerArray.ts  PointSelector.ts  SectionArray.ts  SelectorArray.ts  ShapefileList.ts  WorkingNotification.ts
