[package]
name = "rust"
version = "0.1.0"
authors = ["Nicholas Phillips <nwp2@illinois.edu>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]

[dependencies]
wasm-bindgen = "0.2.63"
rstar = "0.9.3"
fast-float = "0.2"


[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = 3
